Added Sorting and Pagination